--- a/pytorch_unet.ipynb
+++ b/pytorch_unet.ipynb
@@ -18,6 +18,136 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from celldata import CellDataset\n",
+    "from augmentation import (\n",
+    "    DoubleCompose, DoubleToTensor, GaussianNoise,\n",
+    "    DoubleHorizontalFlip, DoubleVerticalFlip, DoubleElasticTransform\n",
+    ")\n",
+    "from torchvision import transforms\n",
+    "from torch.utils.data import DataLoader\n",
+    "\n",
+    "def get_train_loader(mean, std, out_size, batch_size, pct=.9):\n",
+    "    \"\"\"Initialize Dataloader for training set\n",
+    "\n",
+    "        mean (float): mean of pixel values\n",
+    "        std (float): standard deviation of pixel values\n",
+    "        out_size (int): dimension of segmentation map (out_size x out_size)\n",
+    "        batch_size (int): number of samples to load for each iteration\n",
+    "        pct (float): percentage of data to use for training (0 < pct <= 1)\n",
+    "    \"\"\"\n",
+    "    image_mask_transform = DoubleCompose([\n",
+    "        DoubleToTensor(),\n",
+    "        DoubleElasticTransform(alpha=250, sigma=10),\n",
+    "        DoubleHorizontalFlip(),\n",
+    "        DoubleVerticalFlip()\n",
+    "    ])\n",
+    "    image_transform = transforms.Compose([\n",
+    "        transforms.ColorJitter(brightness=0.4),\n",
+    "        transforms.Normalize(mean, std),\n",
+    "        GaussianNoise(),\n",
+    "        transforms.Pad(30, padding_mode='reflect')\n",
+    "    ])\n",
+    "    mask_transform = transforms.CenterCrop(out_size)\n",
+    "\n",
+    "    train_data = CellDataset(\n",
+    "        image_mask_transform=image_mask_transform,\n",
+    "        image_transform=image_transform,\n",
+    "        mask_transform=mask_transform,\n",
+    "        pct=pct\n",
+    "    )\n",
+    "    train_loader = DataLoader(\n",
+    "        train_data,\n",
+    "        batch_size=batch_size,\n",
+    "        shuffle=True\n",
+    "    )\n",
+    "    return train_loader\n",
+    "\n",
+    "\n",
+    "def get_test_loader(mean, std, out_size, batch_size):\n",
+    "    \"\"\"Initialize Dataloader for validation set\n",
+    "\n",
+    "        mean (float): mean of pixel values\n",
+    "        std (float): standard deviation of pixel values\n",
+    "        out_size (int): dimension of segmentation map (out_size x out_size)\n",
+    "        batch_size (int): number of samples to load for each iteration\n",
+    "    \"\"\"\n",
+    "    image_transform = transforms.Compose([\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.Normalize(mean, std),\n",
+    "        transforms.Pad(30, padding_mode='reflect')\n",
+    "    ])\n",
+    "    mask_transform = transforms.Compose([\n",
+    "        transforms.ToTensor(),\n",
+    "        transforms.CenterCrop(388)\n",
+    "    ])\n",
+    "\n",
+    "    test_data = CellDataset(\n",
+    "        image_transform=image_transform,\n",
+    "        mask_transform=mask_transform,\n",
+    "        data_type='validate'\n",
+    "    )\n",
+    "\n",
+    "    test_loader = DataLoader(\n",
+    "        test_data,\n",
+    "        batch_size=batch_size,\n",
+    "        shuffle=False\n",
+    "    )\n",
+    "    return test_loader\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'D:\\\\PyProjects\\\\HB_Unet\\\\data\\\\train-volume.tif'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[52], line 8\u001b[0m\n\u001b[0;32m      6\u001b[0m std \u001b[39m=\u001b[39m \u001b[39m0.173\u001b[39m\n\u001b[0;32m      7\u001b[0m out_size \u001b[39m=\u001b[39m \u001b[39m388\u001b[39m  \u001b[39m# output dimension of segmentation map\u001b[39;00m\n\u001b[1;32m----> 8\u001b[0m train_loader \u001b[39m=\u001b[39m get_train_loader(mean, std, out_size, batch_size\u001b[39m=\u001b[39;49m\u001b[39m3\u001b[39;49m)\n\u001b[0;32m      9\u001b[0m test_loader \u001b[39m=\u001b[39m get_test_loader(mean, std, out_size, test_batch_size\u001b[39m=\u001b[39m\u001b[39m3\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[51], line 32\u001b[0m, in \u001b[0;36mget_train_loader\u001b[1;34m(mean, std, out_size, batch_size, pct)\u001b[0m\n\u001b[0;32m     24\u001b[0m image_transform \u001b[39m=\u001b[39m transforms\u001b[39m.\u001b[39mCompose([\n\u001b[0;32m     25\u001b[0m     transforms\u001b[39m.\u001b[39mColorJitter(brightness\u001b[39m=\u001b[39m\u001b[39m0.4\u001b[39m),\n\u001b[0;32m     26\u001b[0m     transforms\u001b[39m.\u001b[39mNormalize(mean, std),\n\u001b[0;32m     27\u001b[0m     GaussianNoise(),\n\u001b[0;32m     28\u001b[0m     transforms\u001b[39m.\u001b[39mPad(\u001b[39m30\u001b[39m, padding_mode\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mreflect\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     29\u001b[0m ])\n\u001b[0;32m     30\u001b[0m mask_transform \u001b[39m=\u001b[39m transforms\u001b[39m.\u001b[39mCenterCrop(out_size)\n\u001b[1;32m---> 32\u001b[0m train_data \u001b[39m=\u001b[39m CellDataset(\n\u001b[0;32m     33\u001b[0m     image_mask_transform\u001b[39m=\u001b[39;49mimage_mask_transform,\n\u001b[0;32m     34\u001b[0m     image_transform\u001b[39m=\u001b[39;49mimage_transform,\n\u001b[0;32m     35\u001b[0m     mask_transform\u001b[39m=\u001b[39;49mmask_transform,\n\u001b[0;32m     36\u001b[0m     pct\u001b[39m=\u001b[39;49mpct\n\u001b[0;32m     37\u001b[0m )\n\u001b[0;32m     38\u001b[0m train_loader \u001b[39m=\u001b[39m DataLoader(\n\u001b[0;32m     39\u001b[0m     train_data,\n\u001b[0;32m     40\u001b[0m     batch_size\u001b[39m=\u001b[39mbatch_size,\n\u001b[0;32m     41\u001b[0m     shuffle\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m\n\u001b[0;32m     42\u001b[0m )\n\u001b[0;32m     43\u001b[0m \u001b[39mreturn\u001b[39;00m train_loader\n",
+      "File \u001b[1;32md:\\PyProjects\\HB_Unet\\celldata.py:78\u001b[0m, in \u001b[0;36mCellDataset.__init__\u001b[1;34m(self, root_dir, image_mask_transform, image_transform, mask_transform, pct, data_type, in_size, out_size, w0, sigma, weight_map_dir)\u001b[0m\n\u001b[0;32m     73\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mweight_transform \u001b[39m=\u001b[39m transforms\u001b[39m.\u001b[39mCompose(\n\u001b[0;32m     74\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmask_transform\u001b[39m.\u001b[39mtransforms[\u001b[39m1\u001b[39m:]\n\u001b[0;32m     75\u001b[0m     )\n\u001b[0;32m     77\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mn_classes \u001b[39m=\u001b[39m \u001b[39m2\u001b[39m\n\u001b[1;32m---> 78\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mimages \u001b[39m=\u001b[39m io\u001b[39m.\u001b[39;49mimread(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtrain_path)\n\u001b[0;32m     79\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmasks \u001b[39m=\u001b[39m io\u001b[39m.\u001b[39mimread(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmask_path)\n\u001b[0;32m     80\u001b[0m myImages \u001b[39m=\u001b[39m []\n",
+      "File \u001b[1;32md:\\Anaconda\\envs\\PyTorch_env\\lib\\site-packages\\skimage\\io\\_io.py:53\u001b[0m, in \u001b[0;36mimread\u001b[1;34m(fname, as_gray, plugin, **plugin_args)\u001b[0m\n\u001b[0;32m     50\u001b[0m         plugin \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mtifffile\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     52\u001b[0m \u001b[39mwith\u001b[39;00m file_or_url_context(fname) \u001b[39mas\u001b[39;00m fname:\n\u001b[1;32m---> 53\u001b[0m     img \u001b[39m=\u001b[39m call_plugin(\u001b[39m'\u001b[39m\u001b[39mimread\u001b[39m\u001b[39m'\u001b[39m, fname, plugin\u001b[39m=\u001b[39mplugin, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mplugin_args)\n\u001b[0;32m     55\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mhasattr\u001b[39m(img, \u001b[39m'\u001b[39m\u001b[39mndim\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[0;32m     56\u001b[0m     \u001b[39mreturn\u001b[39;00m img\n",
+      "File \u001b[1;32md:\\Anaconda\\envs\\PyTorch_env\\lib\\site-packages\\skimage\\io\\manage_plugins.py:207\u001b[0m, in \u001b[0;36mcall_plugin\u001b[1;34m(kind, *args, **kwargs)\u001b[0m\n\u001b[0;32m    203\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mIndexError\u001b[39;00m:\n\u001b[0;32m    204\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mCould not find the plugin \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m for \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m.\u001b[39m\u001b[39m'\u001b[39m \u001b[39m%\u001b[39m\n\u001b[0;32m    205\u001b[0m                            (plugin, kind))\n\u001b[1;32m--> 207\u001b[0m \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32md:\\Anaconda\\envs\\PyTorch_env\\lib\\site-packages\\skimage\\io\\_plugins\\tifffile_plugin.py:30\u001b[0m, in \u001b[0;36mimread\u001b[1;34m(fname, **kwargs)\u001b[0m\n\u001b[0;32m     27\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mimg_num\u001b[39m\u001b[39m'\u001b[39m \u001b[39min\u001b[39;00m kwargs:\n\u001b[0;32m     28\u001b[0m     kwargs[\u001b[39m'\u001b[39m\u001b[39mkey\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m kwargs\u001b[39m.\u001b[39mpop(\u001b[39m'\u001b[39m\u001b[39mimg_num\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m---> 30\u001b[0m \u001b[39mreturn\u001b[39;00m tifffile_imread(fname, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32md:\\Anaconda\\envs\\PyTorch_env\\lib\\site-packages\\tifffile\\tifffile.py:816\u001b[0m, in \u001b[0;36mimread\u001b[1;34m(files, aszarr, **kwargs)\u001b[0m\n\u001b[0;32m    813\u001b[0m     files \u001b[39m=\u001b[39m files[\u001b[39m0\u001b[39m]\n\u001b[0;32m    815\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(files, (\u001b[39mstr\u001b[39m, os\u001b[39m.\u001b[39mPathLike)) \u001b[39mor\u001b[39;00m \u001b[39mhasattr\u001b[39m(files, \u001b[39m'\u001b[39m\u001b[39mseek\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[1;32m--> 816\u001b[0m     \u001b[39mwith\u001b[39;00m TiffFile(files, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs_file) \u001b[39mas\u001b[39;00m tif:\n\u001b[0;32m    817\u001b[0m         \u001b[39mif\u001b[39;00m aszarr:\n\u001b[0;32m    818\u001b[0m             \u001b[39mreturn\u001b[39;00m tif\u001b[39m.\u001b[39maszarr(\u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
+      "File \u001b[1;32md:\\Anaconda\\envs\\PyTorch_env\\lib\\site-packages\\tifffile\\tifffile.py:3000\u001b[0m, in \u001b[0;36mTiffFile.__init__\u001b[1;34m(self, arg, mode, name, offset, size, _multifile, _useframes, _master, **kwargs)\u001b[0m\n\u001b[0;32m   2997\u001b[0m \u001b[39mif\u001b[39;00m mode \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m (\u001b[39mNone\u001b[39;00m, \u001b[39m'\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mr+b\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[0;32m   2998\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39minvalid mode \u001b[39m\u001b[39m{\u001b[39;00mmode\u001b[39m!r}\u001b[39;00m\u001b[39m'\u001b[39m)\n\u001b[1;32m-> 3000\u001b[0m fh \u001b[39m=\u001b[39m FileHandle(arg, mode\u001b[39m=\u001b[39;49mmode, name\u001b[39m=\u001b[39;49mname, offset\u001b[39m=\u001b[39;49moffset, size\u001b[39m=\u001b[39;49msize)\n\u001b[0;32m   3001\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_fh \u001b[39m=\u001b[39m fh\n\u001b[0;32m   3002\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_multifile \u001b[39m=\u001b[39m \u001b[39mbool\u001b[39m(_multifile)\n",
+      "File \u001b[1;32md:\\Anaconda\\envs\\PyTorch_env\\lib\\site-packages\\tifffile\\tifffile.py:9537\u001b[0m, in \u001b[0;36mFileHandle.__init__\u001b[1;34m(self, file, mode, name, offset, size)\u001b[0m\n\u001b[0;32m   9535\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mis_file \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m   9536\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_lock \u001b[39m=\u001b[39m NullContext()\n\u001b[1;32m-> 9537\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mopen()\n",
+      "File \u001b[1;32md:\\Anaconda\\envs\\PyTorch_env\\lib\\site-packages\\tifffile\\tifffile.py:9550\u001b[0m, in \u001b[0;36mFileHandle.open\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m   9548\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_file \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39mrealpath(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_file)\n\u001b[0;32m   9549\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_dir, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_name \u001b[39m=\u001b[39m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39msplit(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_file)\n\u001b[1;32m-> 9550\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_fh \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39;49m(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_file, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_mode)\n\u001b[0;32m   9551\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_close \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[0;32m   9552\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_offset \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'D:\\\\PyProjects\\\\HB_Unet\\\\data\\\\train-volume.tif'"
+     ]
+    }
+   ],
+   "source": [
+    "# Nacitanie obrazkov a masiek\n",
+    "\n",
+    "\n",
+    "\n",
+    "mean = 0.495\n",
+    "std = 0.173\n",
+    "out_size = 388  # output dimension of segmentation map\n",
+    "train_loader = get_train_loader(mean, std, out_size, batch_size=3)\n",
+    "test_loader = get_test_loader(mean, std, out_size, test_batch_size=3)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Simulacia"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
